// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrimaryIconAction snapshot actif vs disabled 1`] = `
<View
  accessibilityLabel="Action snapshot active"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": true,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={10}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#141414",
        "borderRadius": 14,
        "borderWidth": 1.5,
        "height": 60,
        "justifyContent": "center",
        "minHeight": 44,
        "minWidth": 44,
        "width": 60,
      },
      {
        "backgroundColor": "#1f1a08",
        "borderColor": "#f5c727",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Text>
      icône
    </Text>
  </View>
</View>
`;

exports[`PrimaryIconAction snapshot actif vs disabled 2`] = `
<View
  accessibilityLabel="Action snapshot disabled"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": true,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={10}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#141414",
        "borderRadius": 14,
        "borderWidth": 1.5,
        "height": 60,
        "justifyContent": "center",
        "minHeight": 44,
        "minWidth": 44,
        "width": 60,
      },
      {
        "backgroundColor": "#1f1a08",
        "borderColor": "#f5c727",
      },
      undefined,
      {
        "opacity": 0.45,
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Text>
      icône
    </Text>
  </View>
</View>
`;
